syntax = "proto3";

package model;

option go_package = "github.com/apibrew/apibrew/pkg/model";

import 'google/protobuf/timestamp.proto';

enum TokenTerm {
  // 1 minute
  VERY_SHORT = 0;
  // 20 minutes
  SHORT = 1;
  // 2 days
  MIDDLE = 2;
  // 60 days
  LONG = 3;
  // 2 years
  VERY_LONG = 4;
}

message Token {
  TokenTerm term = 1;                       // issue term
  string content = 2;                       // jwt token
  google.protobuf.Timestamp expiration = 3; // expiration time
}
